src/tui/tests/snapshots/keyring_cli__tui__tests__wizard_snapshot_tests__wizard_with_import_choice.snap
---
source: src/tui/tests/wizard_snapshot_tests.rs
expression: state
---
WizardState {
    step: Welcome,
    passkey_choice: Some(
        ImportExisting,
    ),
    passkey_words: None,
    master_password: None,
    confirmed: false,
    keystore_path: None,
    error: None,
}
